--- a/employee/templates/employee/show.html.twig
+++ b/employee/templates/employee/show.html.twig
@@ -49,6 +49,10 @@
                 <th>City</th>
                 <td>{{ employee.city }}</td>
             </tr>
+            <tr>
+                <th>Document</th>
+                <td>{{ employee.document }}</td>
+            </tr>
         </tbody>
     </table>
     </div>
