--- a/employee/templates/employee/_form.html.twig
+++ b/employee/templates/employee/_form.html.twig
@@ -15,7 +15,7 @@
         {{ form_row(form.gender, {'attr':{'class':'form-control'}}) }}
     </div>
     <div class="form-group>">
-        {{ form_row(form.about)}}
+        {{ form_row(form.about) }}
     </div>
     <div class="form-group>">
         {{ form_row(form.salary, {'attr':{'class':'form-control'}}) }}
@@ -25,6 +25,9 @@
     </div>
     <div class="form-group>">
         {{ form_row(form.city, {'attr':{'class':'form-control'}}) }}
+    </div>
+    <div class="form-group>">
+        {{ form_row(form.document, {'attr':{'class':'form-control'}}) }}
     </div>
         <button class="btn {{ button_color|default('btn-outline-primary') }}  mt-3">{{ button_label|default('Save Employee') }}</button>
 {{ form_end(form) }}
